# octiron

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  meson.build  qemu_virt.dts  riscv-cross.txt  root.tar  toolchain-riscv64.cmake
include/: memory.hpp  pmm.hpp  tar.hpp
include/colls/: bump_alloc.hpp  slab_alloc.hpp  static_array.hpp
include/device_tree/: device_tree.hpp
include/devices/: uart.hpp
include/fmt/: assert.hpp  print.hpp  printer.hpp
include/riscv/: csr.hpp  fence.hpp  sbi.hpp  sv39.hpp
include/types/: error.hpp  number.hpp  str_view.hpp
kernel/: CMakeLists.txt  kernel_limine.ld  kvspace.h
kernel/include/: memory.h  panic.h  pmm.h  uart.h  vma.h
kernel/include/allocators/: bump.h  slab.h
kernel/include/devices/: device_tree.h
kernel/include/filesystem/: ramfs_ustar.h
kernel/include/fmt/: assert.h  print.h  printer.h
kernel/include/limine/: limine.h  platform_info.h
kernel/include/riscv/: csr.h  sv39.h
kernel/include/types/: byte_view.h  dynamic_array.h  error.h  number.h  result.h  stack.h  static_array.h  str_view.h
kernel/src/: kernel_entry.cpp  memory.cpp  pmm.cpp  uart.cpp
kernel/src/allocators/: bump.cpp
kernel/src/devices/: device_tree.cpp
kernel/src/filesystem/: ramfs_ustar.cpp
kernel/src/fmt/: fmt.cpp
kernel/src/limine/: platform_info.cpp
kernel/src/riscv/: sv39.cpp
scripts/: bootloader_qemu_virt.ld  build_iso.sh  download_limine.sh  download_ovmf.sh  kernel_qemu_virt.ld  limine.conf  qemu.sh  qemu_virt.dtb
src/: libc_impl.cpp  memory.cpp  pmm.cpp  tar.cpp
src/bootloader/: bootloader.S  bootloader.cpp
src/colls/: bump_alloc.cpp
src/devices/: uart.cpp
src/fmt/: fmt.cpp
src/kernel/: kernel.cpp
src/riscv/: sbi.cpp
